# PlatformBridge

./: CMakeLists.txt  README.md  note.txt
libs/x64-windows/debug/: PlatformBridge.lib
libs/x64-windows/release/: PlatformBridge.lib
source/: Fonts.hpp  Monitors.hpp  Paths.hpp  PlatformBridge.hpp  main.cpp
source/Impl/Linux/: Fonts.cpp  Monitors.cpp  Paths.cpp
source/Impl/Windows/: Fonts.cpp  Monitors.cpp  Paths.cpp
source/Linux/: Fonts.cpp  LinuxHeaders.hpp  Paths.cpp  Paths.hpp
source/Windows/: Fonts.cpp  Fonts.hpp  Monitors.cpp  Monitors.hpp  Paths.cpp  Paths.hpp
